# claude-sistema-demo-eventos

./: .gitignore  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: revisor.md
.claude/commands/: revisar.md
.claude/hooks/: pre_commit_pytest.sh
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  seed.py
backend/app/models/: __init__.py  acompanhante.py  inscricao.py
backend/app/repositories/: acompanhante_repo.py  inscricao_repo.py
backend/app/routers/: acompanhantes.py  inscricoes.py
backend/app/schemas/: acompanhante.py  inscricao.py
backend/app/services/: acompanhante_service.py  excecoes.py  inscricao_service.py
backend/migrations/: env.py
backend/migrations/versions/: 85cc278ad888_cria_tabelas_de_inscricoes_e_.py
backend/tests/: conftest.py  test_acompanhantes.py  test_inscricoes.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: inscricoes.ts
frontend/src/components/: StatusBadge.tsx
frontend/src/pages/: DetalheInscricao.tsx  ListaInscricoes.tsx  NovaInscricao.tsx
frontend/src/styles/: global.css  tokens.css
scripts/: reset-db.sh  warmup.sh
